--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/4eec35d0a6.js" crossorigin="anonymous"></script>
     <title>Weather App🌾</title>
@@ -22,8 +22,8 @@
         </h1>
         <br>
         <h2>City</h2>
-        <form id="password-form">
-            <input type="text" id="password-input" placeholder="Enter city">
+        <form class="search-form" id="search-form">
+            <input type="search" id="city-input" placeholder="Enter city">
             <input type="submit" value="Search">
         </form>
         <br>
