link for shecodes

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                         </p>
                     </div>
                 </div>
+                <footer>
+                    <a href="https://github.com/alemavl/my-awesome-app" >
+                        My link 🙋‍♀️💜💚
+                    </a>
+                </footer>
 
             </div>
 
